# p73_cc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: 99-8bitdo-joystick.rules  fastdds_unicast.xml  joy_8bitdo_ultimate2.yaml  joy_8bitdo_ultimate2_linux.yaml
include/: cc.h
launch/: joy_teleop_local.launch.py  joy_teleop_udp.launch.py
logs/: plot_log.py
policy/: policy.onnx
policy/2026-04-12_00-35-18/: policy.onnx
policy/2026-04-14 (decoder, obs_normal)/: policy.onnx
policy/2026-04-16_delayed80/: policy.onnx
policy/2026-04-17_implicit100X/: policy.onnx
policy/2026-04-19_23-33-55/: policy.onnx
policy/2026-04-20_com1/: policy.onnx
policy/2026-04-20_com2/exported/: policy.onnx
policy/2026-04-20_com2/params/: agent.yaml
policy/2026-04-20_com260 O/params/: env.yaml
policy/2026-04-21_best 60/: policy.onnx
policy/2026-04-22_13-37-26/: policy.onnx
policy/2026-04-22_13-43-27 springX/: policy.onnx
policy/2026-04-23_00-31-31/: policy.onnx
policy/2026-04-23_14-55-13 com2/: policy.onnx
policy/2026-04-23_14-59-06 vel=0 X/: policy.onnx
policy/2026-04-23_21-04-37 biasx/: policy.onnx
policy/2026-04-24_10-42-55/: policy.onnx
policy/2026-04-24_19-47-56 pd 70/: policy.onnx
policy/2026-04-26_03-05-36 acnet/: policy.onnx
policy/2026-04-26_10-31-22 acnet,70/: policy.onnx
policy/2026-04-28_14-18-27 pd recent/: policy.onnx
policy/2026-04-28_pd_obs,foot/: policy.onnx
policy/2026-04-29_22-52-40acnetcurr3/git/: isaaclab_walker.diff
policy/2026-04-29_22-52-40acnetcurr3/params/: agent.yaml
policy/2026-04-30_11-57-28_pd_curr2/: policy.onnx
policy/2026-05-02DWMacnetcurr1/: policy.onnx
policy/2026-05-02DWMpdcurr2/: policy.onnx
policy/2026-05-04_DWMbasicacnetcurr1/: policy.onnx
policy/2026-05-04_DWMbasicacnetcurr2/: policy.onnx
policy/2026-05-08_hacnetcurr2/: policy.onnx
policy/2026-05-15_hacnet82curr0/: policy.onnx
policy/2026-05-18_DWM_basic_acnet_curr1/: policy.onnx
policy/2026-05-18_No_est/: policy.onnx
policy/2026-05-18_ad_sp_curr1/: policy.onnx
policy/2026-05-19_acnet_nvi_curr2/: policy.onnx
policy/2026-05-19_ad_sp_curr2/: policy.onnx
policy/2026-05-19_ad_sp_curr3/: policy.onnx
policy/2026-05-23_acnet_MLP/: policy.onnx
policy/2026-05-24_acnet_MLP_fixpace/: policy.onnx
policy/2026-05-24_acnet_future_fz_curr1/: policy.onnx
policy/2026-05-25_14-42-30(5000,0.3)/: policy.onnx
policy/2026-05-25_23-08-12(futurereward,5000)/: policy.onnx
policy/2026-05-26_00-21-30(4000,0)/: policy.onnx
policy/2026-05-26_00-23-02(3000,0.0)/: policy.onnx
policy/2026-05-27_00-25-25(4000)/: policy.onnx
policy/2026-05-27_00-28-21(damp,ema)/: policy.onnx
policy/2026-05-27_00-29-15(4000,smoo)/: policy.onnx
policy/2026-06-02/: policy_baseline.onnx  policy_vae.onnx  policy_vqvae.onnx
policy/archive/2026-04-08_17-01-27/: policy.onnx
policy/archive/2026-04-09_09-05-08/: policy.onnx
policy/archive/2026-04-09_14-41-35/: policy.onnx
policy/archive/2026-04-10_22-02-42 (imu_drift) break/: policy.onnx
scripts/: export_full_policy.py  install_joy_autostart.sh  joy_udp_receiver.py  p73_joy_teleop.py  uninstall_joy_autostart.sh  walker_keyboard_teleop.sh  walker_teleop.py  walker_teleop.sh
scripts/force_analysis/: analyze_results.py  push_experiment.py
src/: cc.cpp
systemd/: p73-joy-teleop@.service
windows/: README.md  install_alias.ps1  install_autostart.bat  joy_bridge_win.py  uninstall_alias.ps1  uninstall_autostart.bat  uninstall_autostart.ps1
(+22 files in other folders)
